--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,7 +59,7 @@ $ft-title: 'MorningBreeze';
 // styles
 body {
     color: $darkVariant;
-    background: $lightVariant;
+    // background: $lightVariant;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
