--- a/src/app/modules/public/components/nav-bar/nav-bar.component.html
+++ b/src/app/modules/public/components/nav-bar/nav-bar.component.html
@@ -18,7 +18,7 @@
     <!-- Connected NAV -->
     <div *ngIf="display && isConnected" class="display">
         <a routerLink="/user">Home</a>
-        <a routerLink="/settings">Settings</a>
+        <a routerLink="/user/settings">Settings</a>
         <a routerLink="/logout">Logout</a>
     </div>
 </nav>
