WIP Posts (Add form on Wall)

--- a/src/app/modules/public/components/nav-bar/nav-bar.component.html
+++ b/src/app/modules/public/components/nav-bar/nav-bar.component.html
@@ -17,7 +17,7 @@
 
     <!-- Connected NAV -->
     <div *ngIf="display && isConnected" class="display">
-        <a routerLink="/user">Home</a>
+        <a routerLink="/user/">Home</a> 
         <a routerLink="/user/settings">Settings</a>
         <a routerLink="/logout">Logout</a>
     </div>
