--- a/src/app/modules/public/components/user/wall/wall.component.html
+++ b/src/app/modules/public/components/user/wall/wall.component.html
@@ -1,3 +1,8 @@
 <main>
     <h1>Hello @{{user?.name}}</h1>
+
+    <form [formGroup]="formPost">
+        <textarea name="" id="" cols="30" rows="5" placeholder="Tell your super funny adventures here..." formControlName="content"></textarea>
+        <button (click)="sendPost()">Publish</button>
+    </form>
 </main>
