--- a/src/styles.scss
+++ b/src/styles.scss
@@ -151,7 +151,7 @@ form {
     flex-direction: column;
 }
 
-form input {
+form input, form textarea {
     border: $darkVariant 1px solid;
     border-radius: 8px;
     color: $darkVariant;
@@ -162,6 +162,7 @@ form input {
 
 form button {
     margin: 0.5vh 0vw;
+    width: 100%;
     padding: 0.25vh 0.5vw;
     // border: none;
     border: $darkVariant 1px solid;
@@ -204,8 +205,11 @@ form a {
         flex-direction: row;
     }
 
-    form {
-        margin: 0vh 5vw;
+    .duo form {
         width: 30vw;
+    }
+
+    form{
+        margin: 0vh 5vw;
     }
 }
