--- a/src/styles.scss
+++ b/src/styles.scss
@@ -182,6 +182,17 @@ form a {
     color: $darkVariant;
 }
 
+article {
+    border: 1px solid $mainColor;
+    border-radius: 12px;
+    margin: 1vh 0;
+    padding: 1vh 2vw;
+}
+
+article:first-child {
+    margin-top: 2vh
+}
+
 .alertRed {
     background: $redLight;
     border: $red 1px solid;
@@ -211,5 +222,9 @@ form a {
 
     form{
         margin: 0vh 5vw;
+    }
+
+    article {
+        margin: 1vh 5vw;
     }
 }
